   * model : renamed 'L' to 'B' since only using blocks of stable helices
 * renaming Predictor*MaxHelix* to Predictor*HelixBlock*
 * IntaRNA/SeedHandler :
   + updateToNextSeed() : generic seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :
 * IntaRNA/SeedHandlerExplicit :
 * IntaRNA/SeedHandlerNoBulge :
   + updateToNextSeed() : specialized seed iteration functionality

190305 Martin Raden :
 * IntaRNA/PredictorMfe2d :
   * fillHybridE() : 
     + explicit initialization (formerly done via initHybridE)
     * now virtual and to be overwritten by subclasses
   - initHybridE() : obsolete
   - hybridErange : obsolete
 * IntaRNA/PredictorMfe2dSeed : runtime optimization
   + fillHybridE() : overwrites super class function and fills both matrices
     in one go to avoid recomputation of loop energies etc.
   - updateOptima() : obsolete
   - hybridErange : obsolete
   - fillHybridE_seed() : now part of fillHybridE()
 * IntaRNA/PredictorMfe2dHeuristic :
   * predict() :
     - matrix initialization now implicit in fillHybridE()
   * fillHybridE() :
     + explicit base pairing checks and field initialization
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   + fillHybridE() : overwrites super class function and fills both matrices
     in one go to avoid recomputation of loop energies etc.
 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() :
     + check for accessibility constraints
 * IntaRNA/HelixConstraint :
   + checkFullE & evalFullE() : whether or not to use full helix energy for 
     constraint checks or loop terms only
   - useNoED : replaced by checkFullE
 * IntaRNA/HelixHandler* :
   * adaptation to HelixConstraint::evalFullE()
 * renaming PredictorMfe2dHelix* to PredictorMfe2dMaxHelix*, since only maximal
   helices are considered for interaction prediction
 + IntaRNA/HelixHandlerNoBulgeMax : computes for each base pair the canonical 
   helix extension to the right with minimal energy (according the given 