@@ -7,9 +7,10 @@
 #include "IntaRNA/RnaSequence.h"
 #include "IntaRNA/AccessibilityDisabled.h"
 #include "IntaRNA/InteractionEnergyBasePair.h"
-#include "IntaRNA/SeedHandlerMfe.h"
+#include "IntaRNA/SeedHandlerNoBulge.h"
 #include "IntaRNA/SeedHandlerIdxOffset.h"
 
+#include <set>
 
 using namespace IntaRNA;
 
@@ -30,14 +31,35 @@ TEST_CASE( "SeedHandlerMfe with offset", "[SeedHandlerIdxOffset]") {
 				, IndexRangeList("")
 				, "");
 
-		SeedHandlerIdxOffset sHIO(new SeedHandlerMfe(energy, sC));
+		SeedHandlerNoBulge shOrig(energy, sC);
+		SeedHandlerIdxOffset shIO( &shOrig, false );
 
-		sHIO.setOffset1(1);
-		sHIO.setOffset2(1);
+		shIO.setOffset1(1);
+		shIO.setOffset2(1);
 
 		//////////////////////////////////////////////////////////////////////////////////////////////////////////
 		/////////////////////////////////////////////   FILLSEED  ////////////////////////////////////////////////
 		//////////////////////////////////////////////////////////////////////////////////////////////////////////
-		REQUIRE(sHIO.fillSeed(0,energy.size1()-sHIO.getOffset1()-1, 0,energy.size2()-sHIO.getOffset2()-1) > 0);
+
+		// we omit 3 of 12 possible seeds (with i1==0)
+		REQUIRE(shIO.fillSeed(0,energy.size1()-shIO.getOffset1()-1, 0,energy.size2()-shIO.getOffset2()-1) == 9);
+
+		size_t i1=10, i2=10;
+
+		// generate sorted list of seed starts without offset
+		std::set< Interaction::BasePair > ioSeeds;
+		while (shIO.updateToNextSeed(i1,i2)) {
+			ioSeeds.insert( Interaction::BasePair(i1+shIO.getOffset1(),i2+shIO.getOffset2()) );
+		}
+
+		i1=10; i2=10;
+		size_t count = 0;
+		// check for list of seed starts without offset
+		while (shOrig.updateToNextSeed(i1,i2, shIO.getOffset1(), 10, shIO.getOffset2(), 10)) {
+			count++;
+			REQUIRE( ioSeeds.find( Interaction::BasePair(i1,i2) ) != ioSeeds.end() );
+		}
+		REQUIRE( count == 9 );
+
 	}
 }
